# CommonLibF4

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json  xmake.lua
.github/workflows/: main_ci.yml  maintenance.yml
AddressLibDecoder/: CMakeLists.txt  README.md  xmake.lua
AddressLibDecoder/src/: main.cpp
AddressLibGen/: .gitignore  CMakeLists.txt  README.md  xmake.lua
AddressLibGen/scripts/: genMappings.py  offset_vr.py
AddressLibGen/src/: main.cpp
CommonLibF4/: CMakeLists.txt  README.md  vcpkg.json  xmake.lua
CommonLibF4/cmake/: config.cmake.in  headerlist.cmake  sourcelist.cmake
CommonLibF4/include/: csv.h
CommonLibF4/include/F4SE/: API.h  F4SE.h  InputMap.h  Interfaces.h  Logger.h  Trampoline.h  Version.h
CommonLibF4/include/F4SE/Impl/: PCH.h  ScePadAPI.h  Util.h  WinAPI.h  WinSTL.h  XInputAPI.h
CommonLibF4/include/RE/: Fallout.h  NiRTTI_IDs.h  OFFSET_NiRTTI_IDs_VR.h  OFFSET_RTTI_IDs_VR.h  OFFSET_VTABLE_IDs_VR.h  RTTI.h  RTTI_IDs.h  RTTI_IDs_VR.h  VTABLE_IDs.h  VTABLE_IDs_VR.h
CommonLibF4/include/RE/Bethesda/: ActiveEffect.h  Actor.h  ActorValueInfo.h  Archive2.h  Atomic.h  BGSBaseAliases.h  BGSCharacterMorph.h  BGSCharacterTint.h  BGSCreatedObjectManager.h  BGSDefaultObjectManager.h  BGSDynamicPersistenceManager.h  BGSEntryPoint.h  BGSHeadPart.h  BGSInventoryInterface.h  BGSInventoryItem.h  BGSLoadGameBuffer.h  BGSMod.h  BGSPrimitive.h  BGSSaveGameBuffer.h  BGSSaveLoad.h  BGSTextureSet.h  (+143 more)
CommonLibF4/include/REL/: Common.h  IAT.h  ID.h  IDDB.h  Module.h  Offset.h  Offset2ID.h  Pattern.h  REL.h  Relocation.h  Segment.h  Version.h
CommonLibF4/include/REX/: REX.h
CommonLibF4/src/F4SE/: API.cpp  InputMap.cpp  Interfaces.cpp  Logger.cpp  Trampoline.cpp
CommonLibF4/src/RE/: Fallout.cpp
CommonLibF4/src/REL/: IAT.cpp  IDDB.cpp  Module.cpp  Relocation.cpp  Version.cpp
CommonLibF4/src/REX/: W32.cpp
ExampleProject/: CMakeLists.txt  vcpkg.json
ExampleProject/src/: main.cpp
F4SEStub/loader/: CMakeLists.txt  README.md
F4SEStub/loader/src/: main.cpp  pch.h
F4SEStub/steam_loader/: CMakeLists.txt  README.md
F4SEStub/steam_loader/src/: main.cpp  pch.h
RTTIDump/: CMakeLists.txt  README.md  xmake.lua
RTTIDump/src/: PCH.h  main.cpp
Tests/: CMakeLists.txt  README.md  xmake.lua
Tests/src/: pch.h
Tests/src/RE/B/: BSTHashMap.cpp
Tests/src/RE/N/: NiTArray.cpp
cmake/: common.cmake
(+197 files in other folders)
